clang/test/BSC/Negative/Ownership/RuleCheck/endscope-and-block/endscope-and-block.cbs
// RUN: %clang_cc1 -verify %s

void func1() {
    int num = 1;
    int owned * a;         // expected-error {{type of 'int' cannot be qualified by 'owned'}}
    a = (owned int *)&num;
}
void func2() {
    int num = 1;
    int * owned a;
    a = (int * owned)&num;
} 

void func3(int * owned a) {
    {
        int * p = (int *)a;
    }
}

void func4(int * owned a) {
    {
        int * p = (int *)a;
    }
    {
        int * owned q = (int * owned)a; 
    } 
}

void func5(int * owned a) {
    {
        int * p = (int *)a;
        {
            int * owned q = (int * owned)p;
        } 
    }
}

void func6(int * owned a) {
    {
        int *p = (int *)a;
        {
            int * owned q = (int * owned)p;
            {}
        } 
    }
}